src/core/org/luaj/vm2/compiler/FuncState.java:
Store Integers directly in h (instead of String): this.h.put(v, Integer.valueOf(idx)) -> this.h.put(v, new Integer(idx))